openmediavault (0.3.0.21) stable; urgency=low

  * Add 'Total' column in filesystem panel.
  * Update the max. length of the filesystem label depending on the
    selected filesystem type.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 06 Aug 2012 20:22:13 +0200

openmediavault (0.3.0.20) stable; urgency=low

  * Fix bug in omv-firstaid. Setting password for WebGUI user 'admin' does
    not work.
  * Mantis 0000559: Modifying user details "breaks" SMB/CIFS access.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 06 Aug 2012 17:53:38 +0200

openmediavault (0.3.0.19) stable; urgency=low

  * Update locales.
  * Do not display shared folder ACL dialog if the filesystem containing the
    shared folder does not support POSIX ACLs.
  * Disable 'Mount' button if the selected filesystem does not provide a
    UUID.
  * Fix bug in logon message script.
  * Mantis 0000556: fstab updating script always adds openmediavault section
    to the end of file.
  * Mantis 0000558: Apache timeout. The Apache FCGI parameter FcgidIOTimeout
    is set to 300 seconds by default, but it can be modified by the
    OMV_APACHE2_FCGIDIOTIMEOUT environment variable.
  * Mantis 0000559: Modifying user details "breaks" SMB/CIFS access. Changing
    unnecessary user informations, e.g. comment or groups, results in a
    restart of the SMB service which is only required if the password has
    been modified.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 19 Jul 2012 19:56:55 +0200

openmediavault (0.3.0.18) stable; urgency=low

  * Update locales.
  * Display error image if requested RRD graph image is not available.
  * Fix issues with wlan interfaces.
  * Fix bug in directory chooser dialog.
  * Fix bug in Windows IE10.
  * Mantis 0000542: Fix bug in avahi-daemon config script.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 12 Jul 2012 20:13:33 +0200

openmediavault (0.3.0.17) stable; urgency=low

  * Update locales.